# self-recorder-packet

./: Cargo.toml  README.md
src/: add_signed.rs  data_block_packer.rs  data_block_unpacker.rs  data_unpacker.rs  empty_box.rs  lib.rs
tests/: experimental_combined.rs  experimental_input.rs  experimental_result_gen.rs  processing_simulation.rs  pseudo_random_input.rs
tests/test_data/: FP1.txt  FT1.txt  P1.txt  T1.txt
