[package]
authors = ["ololoshka2871"]
name = "self-recorder-packet"
version = "0.2.1"
edition = "2018"

[dependencies]
heatshrink-rust = { git = "https://github.com/ololoshka2871/heatshrink.rs.git" }
crc32fast = { version = "1.3.0", optional = true }
tempdir = { version = "0.3.7", optional = true }

[dev-dependencies]
rand = "0.8"

[features]
unpacker = ["crc32fast", "tempdir"]
default = ["unpacker"]
